--- a/eugene.css
+++ b/eugene.css
@@ -7,7 +7,7 @@
     /* font-family: 'Bonbon', ; */
 }
 fieldset{
-    background-color: aqua;
+    /* background-color: aqua; */
     padding: 50px;
     border-radius: 25px;
 }
