--- a/css/recipes.css
+++ b/css/recipes.css
@@ -10,3 +10,26 @@ h1{
   text-align: center;
   /* margin-left: 600px; */
 }
+html {
+  font-family: sans-serif;
+}
+
+form {
+  width: 600px;
+  margin: 0 auto;
+}
+
+div {
+  margin-bottom: 10px;
+}
+
+fieldset {
+  background: cyan;
+  border: 5px solid blue;
+}
+
+legend {
+  padding: 10px;
+  background: blue;
+  color: cyan;
+}
