--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-ol li {
+/* ol li {
     list-style: none;
     display: inline-block;
    }
@@ -8,4 +8,4 @@ ol li {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-  }
+  } */
