--- a/css/recipes.css
+++ b/css/recipes.css
@@ -15,3 +15,12 @@ fieldset{
   padding: 50px;
   border-radius: 25px;
 }
+#button{
+  text-align: center;
+  color: blue;
+  box-sizing: content-box;
+  border-radius: 15px;
+  
+  /* background-color: blue; */
+  /* padding: 15px; */
+}
