--- a/css/peutcook.css
+++ b/css/peutcook.css
@@ -250,3 +250,12 @@ footer a {
     color: #3c97bf;
     text-decoration: none;
 }
+
+#facebook{
+	padding-left:  180px ;
+	padding-right: 50px;
+}
+#whatsapp{
+	padding-right: 50px;
+}
+
