--- a/css/peutcook.css
+++ b/css/peutcook.css
@@ -1,17 +1,16 @@
 #m2{
-    font-family: 'Fredoka One';
+  font-family: 'Fredoka One';
 }
 .contact-us{
-    height: auto;
-    width: auto;
-    background: linear-gradient(to right, #FF4B2B, #ffa64d);
-    text-align: center;
-    color: white;
-    padding: 30px;
-    background-color: #fff;
+  height: auto;
+  width: auto;
+  background: linear-gradient(to right, #FF4B2B, #ffa64d);
+  text-align: center;
+  color: white;
+  padding: 30px;
+  background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
 	width: 768px;
@@ -114,8 +113,7 @@ input {
 .container {
 	background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
 	width: 768px;
@@ -193,12 +191,12 @@ input {
 	left: -100%;
 	height: 100%;
 	width: 200%;
-  	transform: translateX(0);
+  transform: translateX(0);
 	transition: transform 0.6s ease-in-out;
 }
 
 .container.right-panel-active .overlay {
-  	transform: translateX(50%);
+  transform: translateX(50%);
 }
 
 .overlay-panel {
@@ -236,20 +234,20 @@ input {
 
 
 footer {
-padding-top: 50px;
+	padding-top: 50px;
 }
 
 footer p {
-    margin: 10px 0;
+	margin: 10px 0;
 }
 
 footer i {
-    color: red;
+	color: red;
 }
 
 footer a {
-    color: #3c97bf;
-    text-decoration: none;
+	color: #3c97bf;
+	text-decoration: none;
 }
 
 #facebook{
@@ -262,55 +260,55 @@ footer a {
 
 
 ol li {
-    list-style: none;
-    display: inline-block;
+	list-style: none;
+	display: inline-block;
 }
 .containerOne {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+	width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 ol li a {
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    padding: 0 20px;
-   }
-   .one{
-        position: absolute;
-        top: 85%;
-        left: 50%;
-        font-size: 45px;
-        color: white;
-        transform: translate(-50%, -50%);
-      }
-   .two{
+	text-decoration: none;
+  color: white;
+  font-size: 30px;
+  padding: 0 20px;
+}
+.one{
+	position: absolute;
+  top: 85%;
+  left: 50%;
+  font-size: 45px;
+  color: white;
+  transform: translate(-50%, -50%);
+}
+.two{
+	position: absolute;
+  top: 85%;
+  left: 50%;
+  font-size: 45px;
+  color: white;
+  transform: translate(-50%, -50%);
+}
+.three{
     position: absolute;
     top: 85%;
     left: 50%;
     font-size: 45px;
     color: white;
     transform: translate(-50%, -50%);
-   }
-   .three{
+}
+.four{
     position: absolute;
     top: 85%;
     left: 50%;
     font-size: 45px;
     color: white;
     transform: translate(-50%, -50%);
-   }
-   .four{
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    font-size: 45px;
-    color: white;
-    transform: translate(-50%, -50%);
-   }
-   .tit{
+}
+.tit{
     position: absolute;
     top: 20%;
     left: 50%;
@@ -318,13 +316,12 @@ ol li a {
     color: white;
     transform: translate(-50%, -50%);
     font-family: cursive;
-   }
-   .first{
-        position: absolute;
-        top: 8px;
-        left: 16px;
-        
-      }
+}
+first{
+	position: absolute;
+  top: 8px;
+  left: 16px;
+}
       
       
  
