--- a/css/peutcook.css
+++ b/css/peutcook.css
@@ -39,7 +39,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 150vh;
+	height: 269vh;
 	margin: -20px 0 50px;
 }
 
@@ -273,8 +273,8 @@ ol li {
   top: 200px ;
 	width: 100%;
 	height: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  /* padding-right: 10px;
+  padding-left: 10px; */
   margin-right: auto;
   margin-left: auto;
 }
