--- a/css/recipes.css
+++ b/css/recipes.css
@@ -24,6 +24,17 @@ form {
 fieldset{
   font-size: large;
 }
+ol li a {
+	text-decoration: none;
+  color: white;
+  font-size: 30px;
+	padding: 0 20px;
+}
+/* .first{
+	position: absolute;
+  top: 10px;
+  left: 16px;
+} */
 /* 
 div {
   margin-bottom: 10px;
